2007-01-01  Inge Wallin  <inge@lysator.liu.se>

	Import KDChart 2.0 sources.
	* kdchart/*.{h,cpp}: New file.
	
	Prepare porting of KChart from KDChart 1.1.4 to KDChart 2.0
	* rename kdchart  -->  kdchart1
	* *.cpp: Don't include kdchart/...
	* CMakeLists.txt use kdchart1 instead of kdchart

2006-12-28  Inge Wallin  <inge@lysator.liu.se>

	Fix ugly wrap around in charttype selection in the wizard.
	* dialogs/KCWizardCharttype.cc (constructor): Grid is 3x3, not 3x4
	(incPos): Wrap at 3 instead of 4

2006-12-23  Inge Wallin  <inge@lysator.liu.se>

	Fourth step, part 5b of wish 117960 (now finished)
	Put the config dialog in dialogs/
	* Move:
	kchartLine3dConfigPage.cc         --> dialogs/KCConfigSubtypeLinePage
	kchartParameterPieConfigPage.cc   --> dialogs/KCConfigSubtypePiePage
	kchartParameterPolarConfigPage.cc --> dialogs/KCConfigSubtypePolarPage
	
	----------------------------------------------------------------

	Fourth step, part 5a of wish 117960
	Put the config dialog in dialogs/
	* Move:
	kchartParameter3dConfigPage  -->  dialogs/KCConfigSubtypeBarPage
	
	----------------------------------------------------------------

	Fourth step, part 4 of wish 117960
	Put the config dialog in dialogs/
	* Move:
	kchartHeaderFooterConfigPage  -->  dialogs/KCConfigHeaderFooterPage

2006-12-22  Inge Wallin  <inge@lysator.liu.se>

	Fourth step, part 3 of wish 117960
	Put the config dialog in dialogs/
	* Move:
	kchartLegendConfigPage  -->  dialogs/KCConfigLegendPage

2006-12-21  Inge Wallin  <inge@lysator.liu.se>

	Fourth step, part 2 of wish 117960
	Put the config dialog in dialogs/
	* Move:
	kchartParameterConfigPage  -->  dialogs/KCConfigAxesPage
	kchartColorConfigPage      -->  dialogs/KCConfigColorPage
	kchartFontConfigPage       -->  dialogs/KCConfigFontPage

2006-12-21  Inge Wallin  <inge@lysator.liu.se>

	Fourth step, part 1 of wish 117960
	Put the config dialog in dialogs/
	* Move:
	kchartConfigDialog                -->  dialogs/KCConfigDialog